# node_importance

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: ic.py  independent_cascade.py  network.py
examples/notebooks/: test.ipynb
node_importance/: __init__.py  diffusion.py  network.py
node_importance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
node_importance/influence_maximization/: celf.py  genetic.py  greedy.py
tests/: test_ic.py  test_network.py  test_wc.py
