[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "node_importance"
version = "0.1"
description = "Python library for experimenting with contagion processes and influence maximization on graphs."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Aviral Chawla", email = "achawla1@uvm.edu"}
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "numba",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/achawla1/node_importance"

[tool.setuptools.packages.find]
where = ["."]
include = ["node_importance*"]
